gccida/c3/discard_useless_values
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/discard_useless_values/src/cselib.c:828:18: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
htab_clear_slot( hash_table_0, x); 
                 ^~~~~~~~~~~~
                 hash_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/discard_useless_values/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/discard_useless_values/src/obj/cselib.o] Error 1
